--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,20 @@
     width: 5%;
     cursor: grab;
 }
+
+.LED {
+    width: 5%;
+}
+
+.beat-number {
+    display: block;
+}
+
+.blinking-LED {
+    display: block;
+    margin: auto;
+    border: 2px solid #d1d1d1;
+    border-radius: 15px;
+    width: 40%;
+    height: 30%;
+}
