--- a/css/styles.css
+++ b/css/styles.css
@@ -8,25 +8,31 @@
 }
 
 .step {
-    border: 2px solid #d1d1d1;
+    border: 2px solid #5a5a5a;
     border-radius: 5px;
     width: 5%;
+    height: 3.5rem;
     cursor: grab;
 }
 
-.LED {
-    width: 5%;
+.selected {
+    background-color: #47ccff;
 }
 
 .beat-number {
-    display: block;
+    width: 5%;
 }
 
-.blinking-LED {
+.LED {
     display: block;
     margin: auto;
-    border: 2px solid #d1d1d1;
+    border: 2px solid #1e1e1e;
     border-radius: 15px;
     width: 40%;
     height: 30%;
+    background-color: #780000;
+}
+
+.blinking {
+    background-color: #ff0000;
 }
